# AI-News

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  dev_tools.py  env.example  init.sql  pyproject.toml  pytest.ini  start.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  __init__.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  news.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: base.py  news.py  user.py
backend/app/schemas/: news.py  user.py
backend/app/services/: news_service.py  user_service.py
backend/tests/: conftest.py  test_main.py
database/: package-lock.json  package.json  tsconfig.json
database/prisma/: schema.prisma
database/prisma/migrations/20250823085002_init/: migration.sql
database/src/: sample.ts
frontend/: App.tsx  README.md  index.html  install-deps.bat  install-deps.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/components/: BottomNavigation.tsx  EditProfilePage.tsx  GeneralSettingsPage.tsx  HelpFeedbackPage.tsx  HomePage.tsx  LoginPage.tsx  NewsDetailPage.tsx  NewsPage.tsx  NotificationSettingsPage.tsx  PrivacySettingsPage.tsx  ProfilePage.tsx  TestPage.tsx
frontend/components/ui/: label.tsx
frontend/styles/: globals.css
